THRIFT-3377 Deep copy is actually shallow when using typedef members Client: Java Patch: Roshan George <roshan@arjie.com>

This closes #823